socket parser progressign

--- a/www/index.html
+++ b/www/index.html
@@ -2,6 +2,6 @@
 <head><title>Test Page</title></head>
 <body>
 	<p>Test OK</p>
-	<!-- <img src='mypic.jpg'> -->
+	<img src='mypic.jpg'>
 </body>
 </html>
