add some html file to testing GET & POST

--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Test Page</title></head>
 <body>
-	<p>Test OK</p>
-	<img src='mypic.jpg'>
+	<p>Http page</p>
+	<img src='img.jpg'>
 </body>
 </html>
