--- a/www/repo2/index.html
+++ b/www/repo2/index.html
@@ -1,7 +1,6 @@
 <html>
 <head><title>Test Page</title></head>
 <body>
-	<p>Http page</p>
-	<img src='img.jpg'>
+	<p>repo 2 index</p>
 </body>
 </html>
