created Response and Request

--- a/www/form.html
+++ b/www/form.html
@@ -1,12 +1,11 @@
 <html>
-    <form action="create-member.php" method="post">
+<body>
 
-        <input type="text" name="username" value="" placeholder="User Name"> <br />
-        <input type="password" name"password" value="" placeholder="Password"> <br />
-        <input type="password" name"passwordConfirm" value="" placeholder="Confirm Password"> <br />
-        <!-- ?type email or type text -->
-        <input type="email" name"email" value="" placeholder="Email" autofocus> <br />
-        <input type="submit" name="submitRegistration" value="Register!">
+<form action="action.php" method="post">
+Name: <input type="text" name="name"><br>
+E-mail: <input type="text" name="email"><br>
+<input type="submit">
+</form>
 
-    </form>
+</body>
 </html>
