--- a/www/php-example.html
+++ b/www/php-example.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <form method="post" action="php-example.php">
+    <form method="post" action="php-example.php" enctype="application/x-www-form-urlencoded">
       <div>
         <label for="say">What greeting do you want to say?</label>
         <input name="say" id="say" value="Hi">
