--- a/www/post_upload.html
+++ b/www/post_upload.html
@@ -4,7 +4,8 @@
 <form action="" method="post" enctype="multipart/form-data">
     <p><input type="text" name="text" value="text default">
     <p><input type="file" name="file1">
-    <!-- <p><input type="file" name="file2"> -->
+    <p><input type="file" name="file2">
+    <p><input type="file" name="file3">
     <p><button type="submit">Submit</button>
   </form>
 
