--- a/www/uploadPage.html
+++ b/www/uploadPage.html
@@ -2,12 +2,9 @@
 <body>
 
 <form action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">
-    <p><input type="file" name="file1">
-    <!-- <p><input type="file" name="file2">
-    <p><input type="file" name="file3"> -->
+    <p><input type="file" name="file">
     <p><button type="submit">Submit</button>
-  </form>
-  
+</form>
 
 </body>
 </html>
